update doc link.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<hr>
 			<div class="steps">
 				<strong>Step 1: Download Map China Glyphs.</strong>
-				<p>You need to download the latest <a href="">glyphs file</a>.</p>
+				<p>You need to download the latest <a href="https://github.com/francis-liberty/Mapglyphs-China/archive/master.zip">glyphs file</a>.</p>
 				<strong>Step 2: Unzip the glyphs file.</strong> 
 				<p>Make sure you can import all files. (<code>.tff</code>, <code>.eot</code>, <code>.woff</code>, <code>.css</code>)</p>
 				<strong>Step 3: One one line of code needed</strong>
