--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   		<h1>Mapglyphs-China</h1>
   		<p>--- The CSS Map Font\nFont of China provinces.</p>
   		<p>This project is inspired by the project Map Glyphs 1.0 by @tedgrajeda - <a href="http://mapglyphs.com">http://mapglyphs.com</a> - @mapglyphs. </p>
+  		<p>--- The shape data is from <a href="http://commons.wikimedia.org/wiki/File:China_provinces_blank.svg">wikipedia</a>.</p>
   		<p><strong><em>This project doesn't contain any font defined in @mapglyphs.</em></strong></p>
 			<div class="usage">
 			<h2>Usage</h2>
