--- a/index.html
+++ b/index.html
@@ -130,205 +130,205 @@
 		  	<div class="icon"><i class="mg map-cn-hlj mg-2x"></i></div>
 		  	<div class="title-zh">黑龙江</div>
 		  	<div class="title-en">Heilongjiang</div>
-		  	<div class="class">map-cn-hlj</div>
+		  	<div class="class">hlj</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-jl mg-2x"></i></div>
 		  	<div class="title-zh">吉林</div>
 		  	<div class="title-en">Jilin</div>
-		  	<div class="class">map-cn-jl</div>
+		  	<div class="class">jl</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-ln mg-2x"></i></div>
 		  	<div class="title-zh">辽宁</div>
 		  	<div class="title-en">Liaoning</div>
-		  	<div class="class">map-cn-ln</div>
+		  	<div class="class">ln</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-hb mg-2x"></i></div>
 		  	<div class="title-zh">河北</div>
 		  	<div class="title-en">Hebei</div>
-		  	<div class="class">map-cn-hb</div>
+		  	<div class="class">hb</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-sd mg-2x"></i></div>
 		  	<div class="title-zh">山东</div>
 		  	<div class="title-en">Shandong</div>
-		  	<div class="class">map-cn-sd</div>
+		  	<div class="class">sd</div>
+	  	</div>
+	  	<div class="thumb">
+		  	<div class="icon"><i class="mg map-cn-js mg-2x"></i></div>
+		  	<div class="title-zh">江苏</div>
+		  	<div class="title-en">Jiangsu</div>
+		  	<div class="class">js</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-zj mg-2x"></i></div>
 		  	<div class="title-zh">浙江</div>
 		  	<div class="title-en">Zhejiang</div>
-		  	<div class="class">map-cn-zj</div>
+		  	<div class="class">zj</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-ah mg-2x"></i></div>
 		  	<div class="title-zh">安徽</div>
 		  	<div class="title-en">Anhui</div>
-		  	<div class="class">map-cn-ah</div>
+		  	<div class="class">ah</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-hn mg-2x"></i></div>
 		  	<div class="title-zh">河南</div>
 		  	<div class="title-en">Henan</div>
-		  	<div class="class">map-cn-hn</div>
+		  	<div class="class">hn</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-sx mg-2x"></i></div>
 		  	<div class="title-zh">山西</div>
 		  	<div class="title-en">Shanxi</div>
-		  	<div class="class">map-cn-sx</div>
+		  	<div class="class">sx</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-snx mg-2x"></i></div>
 		  	<div class="title-zh">陕西</div>
 		  	<div class="title-en">Shannxi</div>
-		  	<div class="class">map-cn-snx</div>
+		  	<div class="class">snx</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-gs mg-2x"></i></div>
 		  	<div class="title-zh">甘肃</div>
 		  	<div class="title-en">Gansu</div>
-		  	<div class="class">map-cn-gs</div>
+		  	<div class="class">gs</div>
 	  	</div>
 	   	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-jx mg-2x"></i></div>
 		  	<div class="title-zh">江西</div>
 		  	<div class="title-en">Jiangxi</div>
-		  	<div class="class">map-cn-jx</div>
+		  	<div class="class">jx</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-hun mg-2x"></i></div>
 		  	<div class="title-zh">湖南</div>
 		  	<div class="title-en">Hunan</div>
-		  	<div class="class">map-cn-hun</div>
+		  	<div class="class">hun</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-gz mg-2x"></i></div>
 		  	<div class="title-zh">贵州</div>
 		  	<div class="title-en">Guizhou</div>
-		  	<div class="class">map-cn-gz</div>
+		  	<div class="class">gz</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-sc mg-2x"></i></div>
 		  	<div class="title-zh">四川</div>
 		  	<div class="title-en">Sichuan</div>
-		  	<div class="class">map-cn-sc</div>
+		  	<div class="class">sc</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-yn mg-2x"></i></div>
 		  	<div class="title-zh">云南</div>
 		  	<div class="title-en">Yunnan</div>
-		  	<div class="class">map-cn-yn</div>
+		  	<div class="class">yn</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-qh mg-2x"></i></div>
 		  	<div class="title-zh">青海</div>
 		  	<div class="title-en">Qinghai</div>
-		  	<div class="class">map-cn-qh</div>
+		  	<div class="class">qh</div>
 	  	</div>
 	  	<div class="thumb">
-		  	<div class="icon"><i class="mg map-cn-hun mg-2x"></i></div>
+		  	<div class="icon"><i class="mg map-cn-han mg-2x"></i></div>
 		  	<div class="title-zh">海南</div>
-		  	<div class="title-en">Hunan</div>
-		  	<div class="class">map-cn-hun</div>
+		  	<div class="title-en">Hainan</div>
+		  	<div class="class">han</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-cq mg-2x"></i></div>
 		  	<div class="title-zh">重庆</div>
 		  	<div class="title-en">Chongqing</div>
-		  	<div class="class">map-cn-cq</div>
+		  	<div class="class">cq</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-tj mg-2x"></i></div>
 		  	<div class="title-zh">天津</div>
 		  	<div class="title-en">Tianjin</div>
-		  	<div class="class">map-cn-tj</div>
+		  	<div class="class">tj</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-bj mg-2x"></i></div>
 		  	<div class="title-zh">北京</div>
 		  	<div class="title-en">Beijing</div>
-		  	<div class="class">map-cn-bj</div>
+		  	<div class="class">bj</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-nx mg-2x"></i></div>
 		  	<div class="title-zh">宁夏</div>
 		  	<div class="title-en">Ningxia</div>
-		  	<div class="class">map-cn-nx</div>
+		  	<div class="class">nx</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-im mg-2x"></i></div>
 		  	<div class="title-zh">内蒙古</div>
 		  	<div class="title-en">Inner Mongolia</div>
-		  	<div class="class">map-cn-im</div>
+		  	<div class="class">im</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-gx mg-2x"></i></div>
 		  	<div class="title-zh">广西</div>
 		  	<div class="title-en">Guangxi</div>
-		  	<div class="class">map-cn-gx</div>
+		  	<div class="class">gx</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-xj mg-2x"></i></div>
 		  	<div class="title-zh">新疆</div>
 		  	<div class="title-en">Xinjiang</div>
-		  	<div class="class">map-cn-xj</div>
+		  	<div class="class">xj</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-tb mg-2x"></i></div>
 		  	<div class="title-zh">西藏</div>
 		  	<div class="title-en">Tibet</div>
-		  	<div class="class">map-cn-tb</div>
+		  	<div class="class">tb</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-fj mg-2x"></i></div>
 		  	<div class="title-zh">福建</div>
 		  	<div class="title-en">Fujian</div>
-		  	<div class="class">map-cn-fj</div>
+		  	<div class="class">fj</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-gd mg-2x"></i></div>
 		  	<div class="title-zh">广东</div>
 		  	<div class="title-en">Guangdong</div>
-		  	<div class="class">map-cn-gd</div>
+		  	<div class="class">gd</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-tw mg-2x"></i></div>
 		  	<div class="title-zh">台湾</div>
 		  	<div class="title-en">Taiwan</div>
-		  	<div class="class">map-cn-tw</div>
+		  	<div class="class">tw</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-hub mg-2x"></i></div>
 		  	<div class="title-zh">湖北</div>
-		  	<div class="title-en">Taiwan</div>
-		  	<div class="class">map-cn-hub</div>
+		  	<div class="title-en">Hubei</div>
+		  	<div class="class">hub</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-sh mg-2x"></i></div>
 		  	<div class="title-zh">上海</div>
 		  	<div class="title-en">Shanghai</div>
-		  	<div class="class">map-cn-sh</div>
-	  	</div>
-	   	<div class="thumb">
-		  	<div class="icon"><i class="mg map-cn-js mg-2x"></i></div>
-		  	<div class="title-zh">江苏</div>
-		  	<div class="title-en">Jiangsu</div>
-		  	<div class="class">map-cn-js</div>
+		  	<div class="class">sh</div>
 	  	</div>
 	  	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-mc mg-2x"></i></div>
 		  	<div class="title-zh">澳门</div>
 		  	<div class="title-en">Macau</div>
-		  	<div class="class">map-cn-mc</div>
+		  	<div class="class">mc</div>
 	  	</div>
 	   	<div class="thumb">
 		  	<div class="icon"><i class="mg map-cn-hk mg-2x"></i></div>
 		  	<div class="title-zh">香港</div>
 		  	<div class="title-en">Hongkong</div>
-		  	<div class="class">map-cn-hk</div>
+		  	<div class="class">hk</div>
 	  	</div>
   	</div>
   	</div>
